--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <title>Come all ye derpers</title>
   <meta charset="utf-8">
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2b5797">
+  <link rel="mask-icon" href="/assets/safari-pinned-tab.svg" color="#2b5797">
   <link rel="stylesheet" type="text/css" href="/assets/main.css">  
   <meta name="theme-color" content="#ffffff">
 </head>
